--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,7 @@
             rounded-md shadow-md
             text-gray-900 bg-white
             text-sm font-lato
-            transition-all duration-100 scale-0 origin-right;
+            transition-all scale-0 delay-300 duration-300 origin-right;
   }
 
   .scale-zero {
