--- a/styles/index.css
+++ b/styles/index.css
@@ -28,4 +28,8 @@
   .scale-zero {
     @apply scale-0 transform transition-all duration-300 ease-linear;
   }
+
+  .error {
+    @apply text-xs text-red-600 font-lato;
+  }
 }
