--- a/styles/index.css
+++ b/styles/index.css
@@ -7,22 +7,22 @@
 /* Custom classes */
 @layer components {
   .navbar-icons {
-    @apply relative flex items-center justify-center
-            h-12 w-12 
-            bg-gray-800 text-green-400 
-            hover:bg-gray-700 hover:text-white
-            rounded-3xl hover:rounded-xl
-            cursor-pointer
-            overflow-hidden
-            transition-all duration-300 ease-linear;
+    @apply relative flex h-12 w-12
+            cursor-pointer items-center 
+            justify-center overflow-hidden 
+            rounded-3xl bg-gray-800
+            text-green-400 transition-all
+            duration-300
+            ease-linear
+            hover:rounded-xl hover:bg-gray-700 hover:text-white;
   }
 
   .navbar-tooltip {
-    @apply w-auto p-2 m-2 min-w-max
-            rounded-md shadow-md
-            text-gray-900 bg-white
-            text-sm font-lato
-            transition-all scale-0 duration-300 origin-right;
+    @apply font-lato m-2 w-auto min-w-max
+            origin-right scale-0
+            rounded-md bg-white
+            p-2 text-sm
+            text-gray-900 shadow-md transition-all duration-300;
   }
 
   .scale-zero {
@@ -30,6 +30,6 @@
   }
 
   .error {
-    @apply text-xs text-red-600 font-lato;
+    @apply font-lato text-xs text-red-600;
   }
 }
