--- a/styles/index.css
+++ b/styles/index.css
@@ -7,8 +7,8 @@
 /* Custom classes */
 @layer components {
   .navbar-icons {
-    @apply flex h-12 w-12
-            cursor-pointer items-center 
+    @apply flex h-12 w-12 cursor-pointer
+            appearance-none items-center 
             justify-center overflow-hidden 
             rounded-3xl bg-gray-800
             text-green-400 transition-all
@@ -34,8 +34,8 @@
   }
 
   .filter-main {
-    @apply bg-arrowDown mb-2 flex h-14 w-[90vw] appearance-none items-center justify-start rounded-lg border
-    bg-white bg-no-repeat pl-3  pr-7 drop-shadow-sm [background-position:97%] md:w-[29.3vw] lg:w-[28.8vw] xl:w-[22.9vw] 2xl:w-[18.4vw];
+    @apply bg-arrowDown mb-2 h-14  appearance-none  items-center justify-start rounded-lg border bg-white
+    bg-no-repeat pl-3 pr-7  drop-shadow-sm [background-position:97%] md:mb-4;
   }
 
   .filter-minor {
