--- a/styles/index.css
+++ b/styles/index.css
@@ -7,21 +7,21 @@
 /* Custom classes */
 @layer components {
   .navbar-icons {
-    @apply flex h-12 w-12 cursor-pointer
-            appearance-none items-center 
-            justify-center overflow-hidden 
-            rounded-3xl bg-gray-800
-            text-green-400 transition-all
-            duration-300
-            ease-linear
-            hover:rounded-xl hover:bg-gray-700 hover:text-white;
+    @apply bg-lightest dark:bg-dark/50 text-darkest dark:text-lightest/50 hover:text-accent   dark:hover:text-accent 
+            flex h-12 
+            w-12 cursor-pointer 
+            appearance-none items-center
+            justify-center overflow-hidden
+            rounded-3xl
+            transition-all
+            duration-300 ease-linear hover:rounded-xl;
   }
 
   .navbar-tooltip {
-    @apply font-lato m-2  flex  w-[20vw]
-            origin-right scale-0 rounded-md
-            bg-white p-2
-            text-sm text-gray-900
+    @apply font-lato bg-lightest dark:bg-dark/50 text-darkest dark:text-lightest  m-2
+            flex w-[20vw] origin-right
+            scale-0 rounded-md
+            p-2 text-sm
             shadow-md transition-all duration-300 sm:w-auto;
   }
 
